[project]
name = "flash-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "black>=24.2.0",
    "braceexpand>=0.1.7",
    "controlnet-aux==0.0.7",
    "datasets>=4.2.0",
    "diffusers",
    "einops==0.7.0",
    "huggingface-hub>=0.35.3",
    "isort>=5.13.2",
    "lightning==2.2.5",
    "lpips==0.1.4",
    "numpy<2.0",
    "opencv-python==4.9.0.80",
    "peft==0.9.0",
    "pydantic>=2.6.1",
    "pytorch-lightning>=2.5.5",
    "scipy>=1.12.0",
    "sentencepiece>=0.2.0",
    "timm==0.9.16",
    "tokenizers>=0.15.2",
    "torch==2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "transformers==4.38.0",
    "wandb==0.16.2",
    "webdataset>=0.2.86",
    "xformers>=0.0.24",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.uv.sources]
diffusers = { git = "https://github.com/initml/diffusers.git", rev = "clement/feature/flash" }
